# Gateway/src/routes/item.routes.ts
@@ -4,9 +4,25 @@ import { proxyRequest } from '../utils/proxyRequest';
 
 const router = Router();
 
-router.get('/item-categories', async (req: Request, res: Response, next: NextFunction) => {
+router.get('/items', async (req: Request, res: Response, next: NextFunction) => {
   try {
-    await proxyRequest(req, res, SERVICES.ITEM, '/item-categories');
+    await proxyRequest(req, res, SERVICES.ITEM, '/items');
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get('/items/:id', async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    await proxyRequest(req, res, SERVICES.ITEM, `/items/${req.params.id}`);
+  } catch (error) {
+    next(error);
+  }
+});
+
+router.get('/items/random', async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    await proxyRequest(req, res, SERVICES.ITEM, '/items/random');
   } catch (error) {
     next(error);
   }
